    1     devs  WARN: ADC input not connected
    1   sensor  ADC value / light intensity conversion tables
    1   energy  Report energy counts in amp-hours
    2     core  Reverse mapping (instr -> addresses) to simplify monitors
    2    probe  Event profiler that collects min, max, mean statistics

----------------------------------- Completed -----------------------------------------
    2    probe  Implemented CallTrace and CallStack utilities for probes     1.7.57
    2    probe  [John Regehr] added Break, Icall, Print, etc monitors        1.7.56
    1    input  ELF format loads symbols for use in monitors                 1.7.56
    1    probe  Implement stack change probe that uses probes, watches       1.7.38
  2-3    input  ELF format reader                                            1.7.xx
    1    probe  Added simplest interactive monitor                           1.5.118
    1      sim  Automatically patch node ID for TinyOS and SOS               1.5.116
    1      sim  [Bastian Schlich] ATMega16 device added                      1.5.109
  2-3      sim  Full support for ATMega32 device                             1.5.105
    1     devs  Added lightsensor, RandomSensorData                          1.5.103
    1     devs  First version of RegisterSet for bitfields                   1.5.102
    1    input  Fixed sections option to allow loading user sections         1.5.94
    2    probe  Implemented probing of interrupts                            1.5.94
    2    radio  Implemented probing interface for radio                      1.5.89
    1    probe  [Simon Han] improved TripTimeMonitor                         1.5.89
    1   energy  [Olaf Landsiedel] ported Energy to use FSM.Probe             1.5.88
    2     devs  [Thomas Gaertner] implemented external flash                 1.5.88
    2    probe  [Jey Kottalam] added probing for invalid mem accesses        1.5.85
    2    stack  Added first version of ISE abstract interpreter              1.5.79