@@ -95,6 +95,7 @@
     2    probe  Event profiler that collects min, max, mean statistics
 
 ----------------------------------- Completed -----------------------------------------
+    1     devs  Added first version of ATMegaTimer class                     1.7.65
     2    probe  Implemented CallTrace and CallStack utilities for probes     1.7.57
     2    probe  [John Regehr] added Break, Icall, Print, etc monitors        1.7.56
     1    input  ELF format loads symbols for use in monitors                 1.7.56
@@ -150,6 +151,7 @@
     2     devs  Introduce Channel class to simplify SPI and USART implem.
 
 ----------------------------------- Completed -----------------------------------------
+    1     devs  Added some utility methods to AtmelMicrocontroller           1.7.65
     1    probe  migrate to SourceMapping, remove Program.Location            1.7.42
     2     util  Extracted util.* into cck repository                         1.7.xx
     2      sim  Introduce Simulation class                                   1.5.104
